--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,10 @@
     <div>
       Наш контактные данные: <a href = "+7963-453-43-12" > телефон</a>
     </div>
+
+    <div>
+      Наш e-mail: <a href = "zhorji-88@mail.ru >mail@mail.ru</a>
+    </div>
     
     </head>
     </html>
