added e-mail, number

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,10 @@
     <div>
       Наш e-mail: <a href = "zhorji-88@mail.ru >mail@mail.ru</a>
     </div>
+
+    <div>
+      Наш e-mail: <a href = "gotrend11@mail.ru >mail@mail.ru</a>
+    </div>
     
-    </head>
-    </html>
+  </head>
+</html>
