--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,10 @@
 <html>
  <head>
     <div>
-      Наш контактные данные: <a href = "+8933-333-11-11" > +7963-444-22-22</a>
+      Наш контактные данные: <a href = "+8933-333-11-11" > +1111111111111</a>
     </div>
    <div>
-      Наш контактные данные: <a href = "+8922-333-22-22" > +8922-333-22-22</a>
+      Наш контактные данные: <a href = "+222222222222" > +222222222222 </a>
     </div>
 
     <div>
