basket delivery options added

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,17 @@
     <div>
       Наш e-mail: <a href = "zhorji-88@mail.ru >mail@mail.ru</a>
     </div>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
 
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
+     <h2> Выберите пункт доставки</h2>
     <div>
       Наш e-mail: <a href = "gotrend11@mail.ru >mail@mail.ru</a>
     </div>
