--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,8 @@
      <h2> Выберите пункт доставки</h2>
      <h2> Выберите пункт доставки</h2>
      <h2> Выберите пункт доставки</h2>
-    <div>
+    <button> Кнопка</button>
+     <div>
       Наш e-mail: <a href = "gotrend11@mail.ru >mail@mail.ru</a>
     </div>
     
