--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
       Наш контактные данные: <a href = "+79133331263" > +7913-333-12-63</a>
      </div>
 
-
+<h2> Способы оплаты</h2>
     <div>
       Наш e-mail: <a href = "zhorji-88@mail.ru >mail@mail.ru</a>
     </div>
